# OSCompatible

./: .gitignore  CMakeLists.txt  LICENSE  OSCompatible.h  OSCompatibleThread.cpp  OSCompatibleThread.h  README.md  main.cpp  main1.cpp  main3.cpp
examples/: CMakeLists.txt  main.cpp
include/: OSCompatible.h  OSCompatibleThread.h
include/OSCompatible/: thread.hpp
src/: OSCompatibleThread.cpp
tests/: CMakeLists.txt  main_linux.cpp  main_linux2.cpp  main_windows.cpp
