# Minimum CMake version required
cmake_minimum_required(VERSION 3.10)

# Project name and version
project(OSCompatible_example VERSION 1.0)

# Specify the C++ standard
# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED True)

# set(OS_COMPATIBLE_INC_DIR  ${CMAKE_CURRENT_LIST_DIR}/../include)


# file(GLOB SOURCES *.cpp)


# include_directories(${OS_COMPATIBLE_INC_DIR})


# # Add the executable
# add_executable(OSCompatible_example ${SOURCES})

